harness/test/errors/006_div_by_zero.eu
# Division by zero
bomb: 1 / 0
